--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,18 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
+  pointer-events: none;
+}
+
+.App-load {
+  height: 20vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .App-load {
+    animation: App-logo-spin infinite 1s linear;
   }
 }
 
@@ -25,7 +30,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #ffffff;
 }
 
 @keyframes App-logo-spin {
