--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #5266f3;
+  min-height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,12 +44,17 @@
   }
 }
 
+.slogan {
+  font-family: andale mono, monospace;
+}
+
 /*******************************! Lang.js ********************************/
 .lang {
   display: grid;
   grid-template-columns: repeat(3, 9fr);
   gap: 1%;
   text-align: center;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 @media screen and (max-width: 550px) {
