--- a/src/App.css
+++ b/src/App.css
@@ -9,17 +9,6 @@
   pointer-events: none;
 }
 
-.App-load {
-  height: 20vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-load {
-    animation: App-logo-spin infinite 1s linear;
-  }
-}
-
 .App-header {
   background-color: #5266f3;
   min-height: 40vh;
@@ -29,6 +18,19 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+/*******************************! Lang.js ********************************/
+
+.App-load {
+  height: 20vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-load {
+    animation: App-logo-spin infinite 1s linear;
+  }
 }
 
 .App-link {
@@ -44,11 +46,6 @@
   }
 }
 
-.slogan {
-  font-family: andale mono, monospace;
-}
-
-/*******************************! Lang.js ********************************/
 .lang {
   display: grid;
   grid-template-columns: repeat(3, 9fr);
@@ -82,7 +79,10 @@
   padding: 5%;
   background-color: #111;
   color: #fff;
-  font-size: 4vw;
+  font-size: 3vw;
+  border: 1px solid;
+  display: flex;
+  justify-content: center;
 }
 
 .square2 {
@@ -92,7 +92,10 @@
   padding: 5%;
   background-color: #fff;
   color: #111;
-  font-size: 4vw;
+  font-size: 3vw;
+  border: 1px solid;
+  display: flex;
+  justify-content: center;
 }
 
 .square1 img {
@@ -117,3 +120,40 @@
 }
 
 /*******************************! Logo.js ********************************/
+
+.slogan-effect {
+  position: relative;
+  font-family: andale mono, monospace;
+}
+.slogan-effect span {
+  position: relative;
+  display: inline-block;
+  font-size: 2vw;
+  color: #fff;
+  font-family: andale mono, monospace;
+  text-transform: uppercase;
+  animation: flip 5s infinite;
+  animation-delay: calc(.05s * var(--i))
+}
+@keyframes flip {
+  0%,80% {
+    transform: rotateY(360deg) 
+  }
+}
+
+/*******************************! Footer.js ********************************/
+
+.Footer {
+  text-align: center;
+}
+
+.App-footer {
+  background-color: #5266f3;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
